# smooth-ca

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.cache/clangd/index/: main.c.ABBB391385BFC8DA.idx  main.c.C7F63FC8DAE2277E.idx
src/: CMakeLists.txt  main.c
